# IconBridge

./: .gitignore  README.md  main.py  meson.build
Config/: mappings.json  mergemappings.py  synonyms.json
Scripts/: converter.py
data/: io.github.vdoesui.Isomorphicon.desktop.in  io.github.vdoesui.Isomorphicon.gschema.xml  io.github.vdoesui.Isomorphicon.metainfo.xml.in  io.github.vdoesui.Isomorphicon.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: converter.py  io.github.vdoesui.Isomorphicon.json  isomorphicon.gresource.xml  main.py  meson.build  window.py  window.ui
src/Config/: mappings.json
